# dockerfiles

./: .gitignore  README.md
airflow/: docker-compose.yml
airflow/dags/: test.py
airflow/scripts/: entrypoint.sh
airflow/src/: pyproject.toml
elasticsearch/es-basic/: docker-compose.yml
elasticsearch/es-custom/: .gitignore  README.md  docker-compose.yml
elasticsearch/es-custom/es/: Dockerfile
elasticsearch/es-custom/notebook/: perf-test.ipynb
kafka-confluent/: README.md  docker-compose.yml
kafka-wurstmeister/: README.md  docker-compose.yml
open_distro_elasticsearch/open-distro-es-multi-node/: docker-compose.yml
open_distro_elasticsearch/open-distro-es-multi-node/es/: Dockerfile
open_distro_elasticsearch/open-distro-es-multi-node/es/config/: elasticsearch.yml
open_distro_elasticsearch/open-distro-es-multi-node/kibana/: Dockerfile
open_distro_elasticsearch/open-distro-es-single-node/: docker-compose.yml
open_distro_elasticsearch/open-distro-es-single-node/es/: Dockerfile
open_distro_elasticsearch/open-distro-es-single-node/es/config/: elasticsearch.yml
open_distro_elasticsearch/open-distro-es-single-node/kibana/: Dockerfile
open_distro_elasticsearch/open-distro-es-single-node/kibana/conf/: kibana.yml
redash/: docker-compose.yml
