[tool.poetry]
name = "dags"
version = "0.1.0"
description = ""
authors = ["Jun Ohashi <jun.ohashi.42@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
apache-airflow = "2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
